fix(main): overflow scroll for command params

--- a/projects/main/src/app/section/section-page/page-command-param-entry/page-command-param-entry.component.scss
+++ b/projects/main/src/app/section/section-page/page-command-param-entry/page-command-param-entry.component.scss
@@ -23,3 +23,8 @@ h3 {
 .body {
   padding: $grid $grid * 2 $grid * 3;
 }
+
+.table-wrapper {
+  max-width: 100%;
+  overflow: auto;
+}
